--- a/resources/settings.json
+++ b/resources/settings.json
@@ -22,7 +22,7 @@
             "Screen_Height": 600,
             "Screen_Width": 800
         },
-        "VSYNC": false
+        "vSync": true
     },
     "User Interface": {
         "BuildMenu Position": "BOTTOM"
